# onnx_om

./: .gitignore  README.md
InternVL3_5-1B/: README.md  demo.py  llm.py  proj.py  vision.py
InternVL3_5-1B/om/: README.md  dump_llm_preblock_inputs.py  dump_om_inputs.py  dump_vision_om_inputs.py  om_bin_utils.py  parse_state.py  run_om_pipeline.sh  run_om_pipeline_pipe.sh
InternVL3_5-1B/test/: llm_test.py  mm_proj_test.py  onnx_common.py  onnx_torch_test.py  test.py  vision_test.py
Qwen3-VL/: export_config.py  llm.py  vision.py
Qwen3-VL/om/: README.md  dump_llm_preblock_inputs.py  dump_om_inputs.py  dump_vision_om_inputs.py  om_bin_utils.py  parse_state.py  run.sh  run_om_pipeline.sh  run_om_pipeline_pipe.sh
Qwen3-VL/om/pipeline/: README.md  (+8 more)
Qwen3-VL/test/: llm_test.py  onnx_common.py  onnx_torch_test.py  test.py  vision_test.py
gemma-4/: README.md  assist_model.py  demo.py  llm.py  proj.py  vision.py
gemma-4/om/: README.md  dump_llm_preblock_inputs.py  dump_om_inputs.py  dump_vision_om_inputs.py  om_bin_utils.py  om_bin_utils_it_assistant.py  parse_state.py  run.sh  run_om_pipeline.sh  run_om_pipeline_pipe.sh
gemma-4/om/pipeline/om_resident_cpp/: CMakeLists.txt  build.sh  diagnose_cann_build.sh
gemma-4/om/pipeline/om_resident_cpp/src/: job_queue.h  main.cpp
gemma-4/test/: assistant_test.py  llm_test.py  mm_proj_test.py  onnx_torch_test.py  onnx_torch_test_it.py  test.py  vision_test.py
scripts/: thoru_build_ort_gpu_docker.sh  thoru_gemma_knorm_verify.py  thoru_install_verify_ort_gpu.sh  thoru_rsync.sh  thoru_ssh.sh  thoru_vlm_forward_only_timing.py
(+55 files in other folders)
